# QT3

./: README.md  gitinit.sh  monitor_esp32.bat  run_esp32.bat  syncrepo.sh
Firmware/esp32WifiWebpageServer/: CMakeLists.txt  sdkconfig
Firmware/esp32WifiWebpageServer/main/: CMakeLists.txt  Kconfig.projbuild
Firmware/esp32WifiWebpageServer/main/Communication/: CANCtrl.cpp  CANCtrl.h  WebPageServer.cpp  WebPageServer.h  interface_can.cpp  interface_can.h  web_page_content.h  web_page_content.h.template
Firmware/esp32WifiWebpageServer/main/Control/: Motor.cpp  Motor.h  QT3.cpp  QT3.h
Firmware/esp32WifiWebpageServer/main/LowLevel/: can.c  can.h  main.c  startServer.c  startServer.cpp  startServer.h
Firmware/esp32WifiWebpageServer/main/UserApp/: common_inc.h  main.cpp
Firmware/stm32StepperCtrl/: CMakeLists.txt  README.md  stlink.cfg
Hardware/BaseCtrl/: BaseController.PrjPcb  BaseController.PrjPcbStructure  CAN-POWER-B2B.SchDoc  ESP32.SchDoc  Ethernet-PHY.SchDoc  PcbLib1.PcbLib  Power.SchDoc  Schlib1.SchLib  USB-PROG-UART.SchDoc
Hardware/StepperCtrl/: Drive.SchDoc  Interface.SchDoc  MCU.SchDoc  Motor-42.PrjPCB  Port.SchDoc  Power.SchDoc  README.md
Software/: index.html  start_server.bat
Software/css/: 3d_viewer.css  CentralWindow.css  EndEffectorInfo.css  KeyframeEditor.css  LineChart.css  LinearSlider.css  ResizableTable.css  Select.css  Slider.css  Tab.css  TrackballControlsGizmo.css  UserModeHelper.css  ViewCube.css  Window.css  WorkSpaceSphereCtrl.css
Software/images/: image-edit.pptx
Utils/: python_http_cors_server.py  webpage2string.py
(+112 files in other folders)
